# assignment_4_c

./: CMakeLists.txt
headers/: City.h  Color.h  GameSpecs.h  Human.h  Organism.h  Zombie.h
src/: City.cpp  Color.cpp  Human.cpp  Organism.cpp  Zombie.cpp  main.cpp
